--- a/app/views/deals/_body_promocode.html.erb
+++ b/app/views/deals/_body_promocode.html.erb
@@ -35,6 +35,187 @@
  </div>
 -->
 
+<div class="card clearfix" data-score="10" data-price="31.49">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2VUJ2nE"><img src="https://m.media-amazon.com/images/I/613ZnHdU3WL._SR400,400_.jpg" alt="Wireless Earbuds" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>10% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2VUJ2nE">Wireless Earbuds, Ankndo TWS Bluetooth 5.0 True Wireless Bluetooth Earbuds in Ear Headphones 24H Playtime Stereo Sound Wireless Earphones...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$31.49</span><span class="ori_price">$34.99</span>
+        <div class="tooltip_green">
+          <span>Double Discount</span>
+          <div class="tooltip-content">
+            <p>You can get extra discount by applying promotional code and get additional discount by applying coupon on the detail page of product.</p>
+          </div>
+         </div>
+      </address>
+      <p><span>Take <strong>10% off at $34.99</strong> with promo code: <strong>10ZPTMZW</strong></span></p>
+      <span class="ex_date">Expiration Date : May 31, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2VUJ2nE">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="15" data-price="29.74">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2WpAjy1"><img src="https://m.media-amazon.com/images/I/61VKgAkM1zL._SR400,400_.jpg" alt="Surge Protector Tower GLCON Power" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>15% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2WpAjy1">Surge Protector Tower GLCON Power Strip Tower Fast Wireless Charger + 4 USB 5V/5A Ports + 3000W 13A 6 Outlet Plugs + Charging Tower</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$29.74</span><span class="ori_price">$34.99</span>
+        <div class="tooltip_green">
+          <span>Double Discount</span>
+          <div class="tooltip-content">
+            <p>You can get extra discount by applying promotional code and get additional discount by applying coupon on the detail page of product.</p>
+          </div>
+         </div>
+      </address>
+      <p><span>Take <strong>15% off at $34.99</strong> with promo code: <strong>15UX7LME</strong></span></p>
+      <span class="ex_date">Expiration Date : Jun 08, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2WpAjy1">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="15" data-price="21.21">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2VULIlk"><img src="https://m.media-amazon.com/images/I/71JkhvaEC5L._SR400,400_.jpg" alt="Bluetooth Shower Speakers" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>15% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2VULIlk">Bluetooth Shower Speakers, HAISSKY Portable Wireless Waterproof Speaker with FM Radio & Suction Cup, Pairs Easily to Your Bluetooth Devices - Phones, Tablets</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$21.21</span><span class="ori_price">$24.95</span></address>
+      <p><span>Take <strong>15% off at $24.95</strong> with promo code: <strong>154XH759</strong></span></p>
+      <span class="ex_date">Expiration Date : Jun 21, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2VULIlk">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="40" data-price="24.95">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Wm3P80"><img src="https://m.media-amazon.com/images/I/71EGmN78yvL._SR400,400_.jpg" alt="Bluetooth Earbuds True Wireless Headphones" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>40% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2Wm3P80">Bluetooth Earbuds True Wireless Headphones 5.0, DULLA Cordless TWS Stereo Bass Earphones Noise Cancelling Headsets</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$24.95</span><span class="ori_price">$41.59</span>
+        <div class="tooltip_green">
+          <span>Double Discount</span>
+          <div class="tooltip-content">
+            <p>You can get extra discount by applying promotional code and get additional discount by applying coupon on the detail page of product.</p>
+          </div>
+         </div>
+      </address>
+      <p><span>Take <strong>40% off at $41.59</strong> with promo code: <strong>407O8U7U</strong></span></p>
+      <span class="ex_date">Expiration Date : May 27, 2019 at 09:00 AM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2Wm3P80">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="40" data-price="13.79">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Wv0Vh6"><img src="https://m.media-amazon.com/images/I/61vufj0VMxL._SR400,400_.jpg" alt="Homtime Bedside Alarm Clocks" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>40% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2Wv0Vh6">Homtime Bedside Alarm Clocks with Dual USB Charging Port for Bedroom Small Alarm Clock Snooze Dimmable Black</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$13.79</span><span class="ori_price">$22.99</span></address>
+      <p><span>Take <strong>40% off at $22.99</strong> with promo code: <strong>40H39T3P</strong></span></p>
+      <span class="ex_date">Expiration Date : Jun 03, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2Wv0Vh6">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="30" data-price="5.59">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2EBObLB"><img src="https://m.media-amazon.com/images/I/41SclBtEHtL._SR400,400_.jpg" alt="Keyboard Cleaner Universal Cleaning Gel" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>30% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2EBObLB">Keyboard Cleaner Universal Cleaning Gel for PC Tablet Laptop Keyboards, Car Vents, Cameras, Printers, Calculators from ColorCoral</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$5.59</span><span class="ori_price">$7.99</span></address>
+      <p><span>Take <strong>30% off at $7.99</strong> with promo code: <strong>308QWSL3</strong></span></p>
+      <span class="ex_date">Expiration Date : May 31, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2EBObLB">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="30" data-price="16.09">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Ww3CPs"><img src="https://m.media-amazon.com/images/I/717j51L-ebL._SR400,400_.jpg" alt="Jubor Tablet Stand Wall Mount" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>30% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2Ww3CPs">Jubor Tablet Stand Wall Mount, 2-in-1 Kitchen iPad Holder for Surface Pro, Nintendo Switch, iPad Mini, iPad Pro, 7"-12" Tablet...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$16.09</span><span class="ori_price">$22.99</span></address>
+      <p><span>Take <strong>30% off at $22.99</strong> with promo code: <strong>308JPJSG</strong></span></p>
+      <span class="ex_date">Expiration Date : Jun 15, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2Ww3CPs">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="9.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2McAYiE"><img src="https://m.media-amazon.com/images/I/51Z0yZV+MXL._SR400,400_.jpg" alt="Awxlumv Bluetooth Wireless Mouse" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2McAYiE">Awxlumv Bluetooth Wireless Mouse, Dual Mode Slim Rechargeable Noiseless USB Mini Mice Compatible PC Laptop, Computer</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$9.99</span><span class="ori_price">$19.99</span></address>
+      <p><span>Take <strong>50% off at $19.99</strong> with promo code: <strong>5061TRMF</strong></span></p>
+      <span class="ex_date">Expiration Date : May 28, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2McAYiE">Use Code</a>
+  </div>
+</div>
+
 <div class="card clearfix" data-score="30" data-price="19.59">
   <div class="image_box">
     <a target="_blank" href="https://amzn.to/2Mb5f14"><img src="https://m.media-amazon.com/images/I/61TvtuafTqL._SR400,400_.jpg" alt="Chunky Heeled Sandals" /></a>
