--- a/app/views/deals/_body_bestdeals.html.erb
+++ b/app/views/deals/_body_bestdeals.html.erb
@@ -23,6 +23,42 @@
   </div>
 </div> -->
 
+<div class="card clearfix" data-score="39" data-price="90.90">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2K9g29l"><img src="https://images-na.ssl-images-amazon.com/images/I/81tDvpjSvAL._UX575_.jpg" alt="Polo Ralph Lauren" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>39% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2K9g29l">Polo Ralph Lauren Men's Train100 Sneaker</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$90.90</span><span class="ori_price">$150.00</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2K9g29l">Shop Now</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="55" data-price="202.49">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2K7cB3d"><img src="https://images-na.ssl-images-amazon.com/images/I/71Jf7Gd1HoL._SX679_.jpg" alt="Tempur-Pedic Mattress" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>55% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2K7cB3d">Tempur-Pedic TEMPUR-ProForm Supreme 3-Inch King Mattress Topper, Medium Firm Luxury Premium Foam, Washable Cover</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$202.49</span><span class="ori_price">$449.00</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2K7cB3d">Shop Now</a>
+  </div>
+</div>
+
 <div class="card clearfix" data-score="29" data-price="9.99">
   <div class="image_box">
     <a target="_blank" href="https://amzn.to/2Mlwk1Y"><img src="https://images-na.ssl-images-amazon.com/images/I/61mycc7Wn2L._AC_SR300,300_.jpg" alt="eufy Lumi Plug-In Night Light" /></a>
