--- a/app/views/blogs/_body.html.erb
+++ b/app/views/blogs/_body.html.erb
@@ -24,7 +24,7 @@
   </div>
   <div class="image">
     <span>May.26</span>
-    <a href="/blogs/blog_03"><img src="https://images.unsplash.com/photo-1464660756002-dd9f9a92b01b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1034&q=80" alt="Memorial Day Deals" /></a>
+    <a href="/blogs/blog_03"><img src="https://i.pinimg.com/originals/88/2c/af/882caf108ae1d284da8e4d1c639dfaa8.png" alt="Memorial Day Deals" /></a>
   </div>
   <div class="inner">
     <h3><a href="/blogs/blog_03">The best Memorial Day sales guide 2019</a></h3>
@@ -42,7 +42,7 @@
   </div>
   <div class="image">
     <span>May.12</span>
-    <a href="/blogs/blog_02"><img src="https://t1.daumcdn.net/cfile/tistory/99D7C6485CD9104723" alt="Amazon Prime" /></a>
+    <a href="/blogs/blog_02"><img src="https://i.pinimg.com/originals/c6/bd/44/c6bd44ece66bc64f97a8a634ad3f1bd3.png" alt="Amazon Prime" /></a>
     <!-- <a href="/blogs/blog_02"><img src="https://images-na.ssl-images-amazon.com/images/I/41G6zxxNH5L.png" alt="Amazon Prime" /></a> -->
   </div>
   <div class="inner">
@@ -62,7 +62,7 @@
 	<div class="image">
 		<span>Apr.25</span>
 		<!-- <a href="/blogs/blog_01"><img src="https://icdn2.digitaltrends.com/image/amazon-prime-day-packages-3-720x720.jpg" alt="Amazon Prime"></a> -->
-    <a href="/blogs/blog_01"><img src="http://cfile9.uf.tistory.com/image/997C0E425CD90FFB186538" alt="Amazon Prime"></a>
+    <a href="/blogs/blog_01"><img src="https://i.pinimg.com/originals/61/ac/76/61ac763c33e048ee87f27e16da8db9fe.png" alt="Amazon Prime"></a>
 	</div>
 	<div class="inner">
 		<h3><a href="/blogs/blog_01">"All About The Amazon Prime"</a></h3>
