--- a/app/views/deals/_body_promocode.html.erb
+++ b/app/views/deals/_body_promocode.html.erb
@@ -35,6 +35,327 @@
  </div>
 -->
 
+<div class="card clearfix" data-score="40" data-price="17.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2MdGelZ"><img src="https://m.media-amazon.com/images/I/61tma4ZnU9L._SR400,400_.jpg" alt="Socks Walking Shoes Women Men" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>40% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2MdGelZ">Socks Walking Shoes Women Men - Fashion Causal Lightweight Breathable Mesh Slip On Running Sneakers</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$17.99</span><span class="ori_price">$29.99</span></address>
+      <p><span>Take <strong>40% off at $29.99</strong> with promo code: <strong>4028BY9Y</strong></span></p>
+      <span class="ex_date">Expiration Date : May 27, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2MdGelZ">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="40" data-price="14.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2W83XbY"><img src="https://m.media-amazon.com/images/I/71tt7RxG+eL._SR400,400_.jpg" alt="Athletic Casual Walking Work Shoes" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>40% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2W83XbY">JIASUQI Womens Gilrs Lightweight Slip on Athletic Casual Walking Work Shoes Fashion Sneakers</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$14.99</span><span class="ori_price">$24.99</span></address>
+      <p><span>Take <strong>40% off at $24.99</strong> with promo code: <strong>40RFFQ8K</strong></span></p>
+      <span class="ex_date">Expiration Date : May 31, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2W83XbY">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="10" data-price="26.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Wtq1x4"><img src="https://m.media-amazon.com/images/I/61qpnRpUd1L._SR400,400_.jpg" alt="Athletic Gym Walking Shoes" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>10% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2Wtq1x4">Weweya Men's Sneakers Ultra Lightweight Tennis Shoes Athletic Gym Walking Shoes</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$26.99</span><span class="ori_price">$29.99</span></address>
+      <p><span>Take <strong>10% off at $29.99</strong> with promo code: <strong>1086E5CO</strong></span></p>
+      <span class="ex_date">Expiration Date : May 31, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2Wtq1x4">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="60" data-price="9.60">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2ECbwg4"><img src="https://m.media-amazon.com/images/I/81Vzj6-jcvL._SR400,400_.jpg" alt="Water Shoes" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>60% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2ECbwg4">DREAM PAIRS Men's Slip On Water Shoes</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$9.60</span><span class="ori_price">$23.99</span></address>
+      <p><span>Take <strong>60% off at $23.99</strong> with promo code: <strong>60D4MAPO</strong></span></p>
+      <span class="ex_date">Expiration Date : May 27, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2ECbwg4">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="40" data-price="11.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2VPDmvi"><img src="https://m.media-amazon.com/images/I/71m69CfBL1L._SR400,400_.jpg" alt="Running Shoes Sneakers" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>40% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2VPDmvi">DREAM PAIRS Men's Athletic Running Shoes Sneakers</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$11.99</span><span class="ori_price">$19.99</span></address>
+      <p><span>Take <strong>40% off at $19.99</strong> with promo code: <strong>4025IS8H</strong></span></p>
+      <span class="ex_date">Expiration Date : May 28, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2VPDmvi">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="70" data-price="8.70">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2W7bW96"><img src="https://m.media-amazon.com/images/I/81DBZTrvImL._SR400,400_.jpg" alt="RomenSi Men's Sneakers" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>70% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2W7bW96">RomenSi Men's Sneakers Running Lightweight Breathable Gym Casual Shoes</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$8.70</span><span class="ori_price">$28.99</span></address>
+      <p><span>Take <strong>70% off at $28.99</strong> with promo code: <strong>70YXXC8U</strong></span></p>
+      <span class="ex_date">Expiration Date : May 31, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2W7bW96">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="20" data-price="119.91">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2VP6i6B"><img src="https://m.media-amazon.com/images/I/61CctzJphcL._SR400,400_.jpg" alt="FLYBIRD Adjustable Bench" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>20% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2VP6i6B">FLYBIRD Adjustable Bench,Utility Weight Bench for Full Body Workout- Multi-Purpose Foldable Incline/Decline Bench</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$119.91</span><span class="ori_price">$149.89</span>
+        <div class="tooltip_green">
+          <span>Double Discount</span>
+          <div class="tooltip-content">
+            <p>You can get extra discount by applying promotional code and get additional discount by applying coupon on the detail page of product.</p>
+          </div>
+         </div>
+      </address>
+      <p><span>Take <strong>20% off at $149.89</strong> with promo code: <strong>20FE7FRJ</strong></span></p>
+      <span class="ex_date">Expiration Date : May 28, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2VP6i6B">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="30" data-price="104.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Mmar2y"><img src="https://m.media-amazon.com/images/I/51uVeTtYUPL._SR400,400_.jpg" alt="Wi-Fi Extender" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>30% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2Mmar2y">WAVLINK Halo Base 3 Smart Wireless Whole Home Mesh WiFi System, 1 WiFi Router + 2 Satellite Points Repeater Wi-Fi Extender</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$104.99</span><span class="ori_price">$149.99</span>
+        <div class="tooltip_green">
+          <span>Double Discount</span>
+          <div class="tooltip-content">
+            <p>You can get extra discount by applying promotional code and get additional discount by applying coupon on the detail page of product.</p>
+          </div>
+         </div>
+      </address>
+      <p><span>Take <strong>30% off at $149.99</strong> with promo code: <strong>30MESHHALO3</strong></span></p>
+      <span class="ex_date">Expiration Date : Jun 07, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2Mmar2y">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="70" data-price="19.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2WwgKUK"><img src="https://m.media-amazon.com/images/I/61d5xlK-twL._SR400,400_.jpg" alt="Women's Top Handle Bag" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>70% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2WwgKUK">Clearance Sale Designer Leather Handbag Purse Ladies Hobo Shoulder Tote Bag Women's Top Handle Bag</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$19.99</span><span class="ori_price">$66.63</span></address>
+      <p><span>Take <strong>70% off at $66.63</strong> with promo code: <strong>704ONMM7</strong></span></p>
+      <span class="ex_date">Expiration Date : Jun 09, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2WwgKUK">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="77" data-price="9.20">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2W7veLr"><img src="https://m.media-amazon.com/images/I/619-nuNWsZL._SR400,400_.jpg" alt="Hisea Aviator Sunglasses" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>77% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2W7veLr">Hisea Aviator Sunglasses for Men Women, Sport Polarized 100% UV Eye Protection Outdoor</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$9.20</span><span class="ori_price">$39.99</span></address>
+      <p><span>Take <strong>77% off at $39.99</strong> with promo code: <strong>77UQV61T</strong></span></p>
+      <span class="ex_date">Expiration Date : Jun 18, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2W7veLr">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="25.00">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2QtybQm"><img src="https://m.media-amazon.com/images/I/51AMSxFfp6L._SR400,400_.jpg" alt="Hair Repair Brush" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2QtybQm">Hair Repair Brush for Hair Straightener– Mexitop Ice Hair Care Conditioning System, Locked in Hydration...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$25.00</span><span class="ori_price">$49.99</span></address>
+      <p><span>Take <strong>50% off at $49.99</strong> with promo code: <strong>50OS691R</strong></span></p>
+      <span class="ex_date">Expiration Date : Jun 12, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2QtybQm">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="60" data-price="15.60">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2K8lucL"><img src="https://m.media-amazon.com/images/I/91ksPJ+zGGL._SR400,400_.jpg" alt="Bruno Marc Men's Stone Motorcycle Combat Boots" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>60% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2K8lucL">Bruno Marc Men's Stone Motorcycle Combat Boots</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$15.60</span><span class="ori_price">$38.99</span></address>
+      <p><span>Take <strong>60% off at $38.99</strong> with promo code: <strong>609JGBQK</strong></span></p>
+      <span class="ex_date">Expiration Date : Jun 08, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2K8lucL">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="40" data-price="10.19">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2W3LUDE"><img src="https://m.media-amazon.com/images/I/71PLQvrlU+L._SR400,400_.jpg" alt="Egnaro Silicone Wedding Ring" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>40% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2W3LUDE">Egnaro Silicone Wedding Ring for Men, Breathable Mens' Rubber Wedding Bands, Size 8 9 10 11 12 13, for ...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$10.19</span><span class="ori_price">$16.99</span></address>
+      <p><span>Take <strong>40% off at $16.99</strong> with promo code: <strong>40EGNARO</strong></span></p>
+      <span class="ex_date">Expiration Date : Jun 01, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2W3LUDE">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="8.49">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Mb8g1B"><img src="https://m.media-amazon.com/images/I/71rhCpum07L._SR400,400_.jpg" alt="Charcoal Coffee Body Scrub" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2Mb8g1B">QQCute Himalayan Charcoal Coffee Body Scrub 3 in 1 set 18 oz with Essential Oil All Natural Salt Scrubs to Exfoliate & Moisturize Skin Birthday Gifts</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$8.49</span><span class="ori_price">$16.99</span>
+        <div class="tooltip_green">
+          <span>Double Discount</span>
+          <div class="tooltip-content">
+            <p>You can get extra discount by applying promotional code and get additional discount by applying coupon on the detail page of product.</p>
+          </div>
+         </div>
+      </address>
+      <p><span>Take <strong>50% off at $16.99</strong> with promo code: <strong>50UEILCI</strong></span></p>
+      <span class="ex_date">Expiration Date : Jun 02, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2Mb8g1B">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="70" data-price="6.00">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2W8qbdC"><img src="https://m.media-amazon.com/images/I/61q5EZBN2ML._SR400,400_.jpg" alt="NANFU Wireless Charger" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>70% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2W8qbdC">NANFU Wireless Charger, Convenient and Safe, 7.5W Charges</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$6.00</span><span class="ori_price">$19.99</span></address>
+      <p><span>Take <strong>70% off at $19.99</strong> with promo code: <strong>70IZ2QC1</strong></span></p>
+      <span class="ex_date">Expiration Date : May 31, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2W8qbdC">Use Code</a>
+  </div>
+</div>
+
 <div class="card clearfix" data-score="10" data-price="31.49">
   <div class="image_box">
     <a target="_blank" href="https://amzn.to/2VUJ2nE"><img src="https://m.media-amazon.com/images/I/613ZnHdU3WL._SR400,400_.jpg" alt="Wireless Earbuds" /></a>
