--- a/app/views/deals/_body_bestdeals.html.erb
+++ b/app/views/deals/_body_bestdeals.html.erb
@@ -23,6 +23,78 @@
   </div>
 </div> -->
 
+<div class="card clearfix" data-score="24" data-price="129.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2HEA4Hq"><img src="https://m.media-amazon.com/images/I/61HvDLR67sL._AC_UL320_.jpg" alt="Military Men's Outdoor Sports Watch" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>24% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2HEA4Hq">SUUNTO Core All Black Military Men's Outdoor Sports Watch</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$129.99</span><span class="ori_price">$170.00</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2HEA4Hq">Shop Now</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="53" data-price="352.83">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2K8C3oM"><img src="https://m.media-amazon.com/images/I/81BiJDjjRIL._AC_UL320_.jpg" alt="Titanium Perpetual Chrono Atomic Timekeeping Watch" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>53% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2K8C3oM">Citizen Men's Eco-Drive Titanium Perpetual Chrono Atomic Timekeeping Watch</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$352.83</span><span class="ori_price">$750.00</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2K8C3oM">Shop Now</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="96.87">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Mffkdw"><img src="https://m.media-amazon.com/images/I/51mpVX56AJL._AC_UL320_.jpg" alt="Dress Wrist Watch" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2Mffkdw">Michael Kors Slim Runway Men's Dress Wrist Watch</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$96.87</span><span class="ori_price">$195.00</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2Mffkdw">Shop Now</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="59" data-price="32.60">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2McOi6r"><img src="https://images-na.ssl-images-amazon.com/images/I/711cXewy-cL._UX535_.jpg" alt="K-Swiss" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>59% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2McOi6r">K-Swiss Men's Classic '88 II Fashion Sneaker</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$32.60</span><span class="ori_price">$80.00</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2McOi6r">Shop Now</a>
+  </div>
+</div>
+
 <div class="card clearfix" data-score="39" data-price="90.90">
   <div class="image_box">
     <a target="_blank" href="https://amzn.to/2K9g29l"><img src="https://images-na.ssl-images-amazon.com/images/I/81tDvpjSvAL._UX575_.jpg" alt="Polo Ralph Lauren" /></a>
