--- a/app/assets/stylesheets/deals.css.erb
+++ b/app/assets/stylesheets/deals.css.erb
@@ -70,6 +70,14 @@
   .codes .card_wrap .card .inner>.code_high>p>span{position:relative;top:0.4em;}
   .codes .card_wrap .card .inner>.code_high>p>span>strong{font-size:17px;color:#000;}
   .codes .card_wrap .card .inner>.code_high>.ex_date{display:block;font-size:13px;color:#616161;}
+  .codes .card_wrap .card .inner>.code_high>ul{}
+  .codes .card_wrap .card .inner>.code_high>ul>li{margin-bottom:10px;}
+  .codes .card_wrap .card .inner>.code_high>ul>li>p{font-size:17px;}
+  .codes .card_wrap .card .inner>.code_high>ul>li>ul{}
+  .codes .card_wrap .card .inner>.code_high>ul>li>ul>li{}
+  .codes .card_wrap .card .inner>.code_high>ul>li>ul>li>a{text-decoration:none;color:#08f;font-size:13px;}
+  .codes .card_wrap .card .inner>.code_high>ul>li>ul>li>span{}
+  .codes .card_wrap .card .inner>.code_high>ul>li>ul>li>span>em{font-size:11px;text-decoration:line-through;color:#616161;margin-left:1%;}
   .codes .card_wrap .card .deal_btn{float:left;width:20%;text-align:center;margin:60px 1.5% 0 1.5%;border:1px solid #616161;padding:10px 0;}
   .codes .card_wrap .card .deal_btn a{text-decoration:none;color:#616161;display:block;font-family: 'Montserrat', sans-serif;}
 }
@@ -133,6 +141,14 @@
   .codes .card_wrap .card .inner>.code_high>p>span{font-weight:400;position:relative;top:0.4em;}
   .codes .card_wrap .card .inner>.code_high>p>span>strong{font-size:17px;color:#000;}
   .codes .card_wrap .card .inner>.code_high>.ex_date{display:block;font-size:13px;color:#616161;}
+  .codes .card_wrap .card .inner>.code_high>ul{}
+  .codes .card_wrap .card .inner>.code_high>ul>li{margin-bottom:10px;}
+  .codes .card_wrap .card .inner>.code_high>ul>li>p{font-size:17px;}
+  .codes .card_wrap .card .inner>.code_high>ul>li>ul{}
+  .codes .card_wrap .card .inner>.code_high>ul>li>ul>li{}
+  .codes .card_wrap .card .inner>.code_high>ul>li>ul>li>a{text-decoration:none;color:#08f;}
+  .codes .card_wrap .card .inner>.code_high>ul>li>ul>li>span{}
+  .codes .card_wrap .card .inner>.code_high>ul>li>ul>li>span>em{font-size:11px;text-decoration:line-through;color:#616161;margin-left:1%;}
   .codes .card_wrap .card .deal_btn{float:none;width:100%;padding:7px;margin-top:10px;}
   .codes .card_wrap .card .deal_btn a{text-decoration:none;color:#616161;margin:20px 0 0 0;border:1px solid;padding:7px 20px;}
   .codes .rt_cnt .updating{font-size:30px;font-size:20px;font-family: 'Anton', sans-serif;margin-bottom:100px;}
