--- a/app/views/shared/_bestdeals_days.html.erb
+++ b/app/views/shared/_bestdeals_days.html.erb
@@ -1,10 +1,9 @@
+<li><a href="/deals_days/day_06">May. 27. 2019.</a></li>
 <li><a href="/deals_days/day_05">May. 26. 2019.</a></li>
 <li><a href="/deals_days/day_04">May. 25. 2019.</a></li>
 <li><a href="/deals_days/day_03">May. 24. 2019.</a></li>
 <li><a href="/deals_days/day_02">May. 23. 2019.</a></li>
 <li><a href="/deals_days/day_01">May. 22. 2019.</a></li>
 
-<!-- 
-<li><a href="/deals_days/day_07">May. 17. 2019.</a></li>
-<li><a href="/deals_days/day_06">May. 16. 2019.</a></li>
-<li><a href="/deals_days/day_05">May. 15. 2019.</a></li> -->
+<!-- <li><a href="/deals_days/day_07">May. 17. 2019.</a></li>-->
+
