--- a/app/views/deals/_body_bestdeals.html.erb
+++ b/app/views/deals/_body_bestdeals.html.erb
@@ -73,12 +73,64 @@
 </div> 
 -->
 
+
+<div class="card clearfix" data-score="47" data-price="discounted_price">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/30NYwNP"><img src="https://i.pinimg.com/originals/6d/d3/2d/6dd32d4a03713e8645dabc092630a879.png" alt="Amazon Deal of the Day" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>Up To 47% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/30NYwNP">Amazon Deal of the Day : Save Up to 47% on Netgear Routers, Cable Modem, Extender</a></p>
+
+    <div class="code_high">
+      <ul>
+        <li>
+          <p>Extenders:</p>
+          <ul>
+            <li><a href="https://amzn.to/2MsaAS7">NETGEAR Wi-Fi Range Extender EX6120</a> - <span>45.99<em>65.99</em></span></li>
+            <li><a href="https://bit.ly/2woLvfE">NETGEAR Wi-Fi Range Extender EX2700</a> - <span>19.99<em>31.49</em></span></li>
+            <li><a href="https://amzn.to/2K9Awz1">NETGEAR Wi-Fi Mesh Range Extender EX7500</a> - <span>110.49<em>179.99</em></span></li>
+            <li><a href="Each_Product_link">NETGEAR Orbi WiFi Satellite Extender</a> - <span>198.99<em>299.99</em></span></li>
+          </ul>
+        </li>
+
+        <li>
+          <p>Routers:</p>
+          <ul>
+            <li><a href="https://amzn.to/2MeBAV1">NETGEAR R6700 WiFi Router</a> - <span>68.49<em>129.99</em></span></li>
+            <li><a href="https://amzn.to/2MedmtN">NETGEAR Nighthawk X6S AC4000 WiFi Router</a> - <span>179.99<em>279.99</em></span></li>
+            <li><a href="https://amzn.to/2VUCwxo">NETGEAR AC1200 Dual Band Smart WiFi Router</a> - <span>47.99<em>60.00</em></span></li>
+            <li><a href="https://amzn.to/2K8jalV">NETGEAR Nighthawk AC1900 Dual Band WiFi Router</a> - <span>103.99<em>129.99</em></span></li>
+            <li><a href="https://amzn.to/2VV2WyV">Each_products_title</a> - <span>Dis_Pri<em>Ori_Pri</em></span></li>
+          </ul>
+        </li>
+
+        <li>
+          <p>Cable Modem:</p>
+          <ul>
+            <li><a href="https://amzn.to/2MnNMTw">NETGEAR Cable Modem (32x8) DOCSIS 3.0</a> - <span>74.99<em>109.99</em></span></li>
+            <li><a href="https://amzn.to/2McIiut">NETGEAR CM500V (16x4) DOCSIS 3.0 Cable Modem</a> - <span>109.99<em>139.99</em></span></li>
+            <li><a href="https://amzn.to/2YQPpdt">NETGEAR Nighthawk WiFi Cable Modem Router</a> - <span>134.99<em>209.99</em></span></li>
+            <li><a href="https://amzn.to/2VXSpms">NETGEAR 4G LTE Modem</a> - <span>99.97<em>129.99</em></span></li>
+            <li><a href="https://amzn.to/2K7USZn">NETGEAR Cable Modem 8x4 DOCSIS 3.0 </a> - <span>45.99<em>57.99</em></span></li>
+          </ul>
+        </li>
+        
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/30NYwNP">Shop Now</a>
+  </div>
+</div>
+
 <div class="card clearfix" data-score="65" data-price="discounted_price">
   <div class="image_box">
     <a target="_blank" href="https://amzn.to/2HHcaef"><img src="https://i.pinimg.com/originals/5e/40/c7/5e40c7b4b6aebc1c7455014945b5a245.png" alt="deal of the day" /></a>
   </div>
   <div class="inner">
-    <span class="regular"><em>65% OFF</em> + free shipping</span>
+    <span class="regular"><em>Up To 65% OFF</em> + free shipping</span>
     <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2HHcaef">Amazon Deal of the Day : Save Up to 65% PC products and accessories </a></p>
 
