--- a/app/views/blogs/_body.html.erb
+++ b/app/views/blogs/_body.html.erb
@@ -35,7 +35,7 @@
   </div>
 </div>
 
-<div class="blog_box clearfix">
+<!-- <div class="blog_box clearfix">
   <div class="date">
     <em>May</em>
     <p>12</p>
@@ -43,7 +43,6 @@
   <div class="image">
     <span>May.12</span>
     <a href="/blogs/blog_02"><img src="https://i.pinimg.com/originals/c6/bd/44/c6bd44ece66bc64f97a8a634ad3f1bd3.png" alt="Amazon Prime" /></a>
-    <!-- <a href="/blogs/blog_02"><img src="https://images-na.ssl-images-amazon.com/images/I/41G6zxxNH5L.png" alt="Amazon Prime" /></a> -->
   </div>
   <div class="inner">
     <h3><a href="/blogs/blog_02">How to sign up & cancel Amazon Prime free 30-day trial</a></h3>
@@ -52,7 +51,7 @@
       <a href="/blogs/blog_02">See more detail<img src="<%=asset_path 'direction_right.png' %>" alt="" /></a>
     </div>
   </div>
-</div>
+</div> -->
 
 <div class="blog_box clearfix">
 	<div class="date">
