--- a/app/views/blogs/blog_01.html.erb
+++ b/app/views/blogs/blog_01.html.erb
@@ -11,7 +11,7 @@
           <p><a target="_blank" href="https://amzn.to/2NIxZLC"><span class="prime">Amazon Prime</span></a> is a paid subscription service($119 per year currently, plus a <a target="_blank" href="https://amzn.to/2NIxZLC"><span class="prime">free 30-day trial</span></a> or $12.99 per month) offered by Amazon that gives users access to free two-day delivery (one-day in some areas), streaming video and music, and other benefits for a monthly or yearly fee.</p>
           <div class="inner_btn">
             <a target="_blank" href="https://amzn.to/2YcWjd1">Try free 30-day trial</a>
-            <a target="_blank" href="/blogs/blog_02">How to sign up & Cancel</a>
+            <!-- <a target="_blank" href="/blogs/blog_02">How to sign up & Cancel</a> -->
           </div>
           <img src="https://icdn2.digitaltrends.com/image/amazon-prime-day-packages-3-720x720.jpg" alt="Amazon Prime">
         </div>
@@ -75,7 +75,7 @@
         <div class="blog_tit">
           <div class="inner_btn">
             <a target="_blank" href="https://amzn.to/2YcWjd1">Try free 30-day trial</a>
-            <a target="_blank" href="/blogs/blog_02">How to sign up & Cancel</a>
+            <!-- <a target="_blank" href="/blogs/blog_02">How to sign up & Cancel</a> -->
           </div>
         </div>
 
